--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,11 @@
 
 a {
   text-decoration: none;
-  color: black;
+  color: rgb(57, 189, 250);
 }
 
 .active {
-  color: red;
+  color: rgb(89, 0, 255);
 }
 
 .rockets-images {
@@ -21,4 +21,8 @@ a {
 .span-mission {
   border-radius: 3px;
   padding: 0.5%;
+}
+
+.profile-nav {
+  border-left: 1px solid grey;
 }
