--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   padding: 0 !important;
 }
 
+.panel-bg {
+  padding: 24px;
+  border-bottom: 1px solid black;
+} 
+
 a {
   text-decoration: none;
   color: rgb(57, 189, 250);
@@ -25,4 +30,8 @@ a {
 
 .profile-nav {
   border-left: 1px solid grey;
+}
+
+.button-reserverd {
+  display: none;
 }
